--- a/baseline/src/log4j.properties
+++ b/baseline/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=info, console , File
+log4j.rootLogger=INFO, console , File
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
