--- a/trunk/DistributedSystem/DSProject3/.classpath
+++ b/trunk/DistributedSystem/DSProject3/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/LBXMLOperator.jar"/>
 	<classpathentry kind="lib" path="lib/xml4j_1_1_16.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MyLib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
