--- a/trunk/DistributedSystem/DSProject3/src/log4j.properties
+++ b/trunk/DistributedSystem/DSProject3/src/log4j.properties
@@ -4,9 +4,7 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss}: %-6p - %m%n
 
-log4j.appender.File=org.apache.log4j.RollingFileAppender
+log4j.appender.File=org.apache.log4j.FileAppender
 log4j.appender.File.File=log.txt
-log4j.appender.File.MaxFileSize=100KB
-log4j.appender.File.MaxBackupIndex=1
 log4j.appender.File.layout=org.apache.log4j.PatternLayout
 log4j.appender.File.layout.ConversionPattern=%d{yy-MM-dd HH:mm:ss}: %-6p %c %x - %m%n
